# hongdo_system

./: .gitignore  LICENSE  README.md
build_dependecy/: build.sh  create_udev_rules.sh  ros_auto_boot.sh
bulid_dependecy/: .bulid_dependecy.sh.swp  bulid.sh
docs/: index.html  project.js  styles.css
hongdo_ros/: CMakeLists.txt  package.xml
hongdo_ros_arduino/: CMakeLists.txt  package.xml
hongdo_ros_arm_control/: CMakeLists.txt  package.xml
hongdo_ros_bringup/: CMakeLists.txt  package.xml  setup.py
hongdo_ros_bringup/camera_info/: hongdo_ros_camera_depth.yaml  hongdo_ros_camera_rgb.yaml
hongdo_ros_bringup/launch/: hongdo_ros_imu.launch  hongdo_ros_lidar.launch  hongdo_ros_model.launch  hongdo_ros_motor.launch  hongdo_ros_remote.launch  hongdo_ros_robot.launch  hongdo_ros_web_connect.launch
hongdo_ros_bringup/launch/includes/: description.launch.G2.xml  description.launch.xml
hongdo_ros_bringup/nodes/: hongdo_packet_handler.py  hongdo_ros_motor_node.py  hongdo_ros_motor_r1_node.py  hongdo_ros_motor_r1v2_node.py  omo_r1_packet_handler.py
hongdo_ros_description/: CMakeLists.txt  package.xml
hongdo_ros_description/urdf/: hongdo_ros.urdf.g2.xacro  hongdo_ros.urdf.xacro
hongdo_ros_dynamixel/dynamixel_workbench_controllers/config/: basic.yaml  joint_1_0.yaml
hongdo_ros_dynamixel/dynamixel_workbench_controllers/launch/: dynamixel_controllers.launch  hongdo_ros_dynamixel_controllers.launch
hongdo_ros_dynamixel/dynamixel_workbench_operators/: CMakeLists.txt
hongdo_ros_dynamixel/dynamixel_workbench_operators/config/: motion.yaml
hongdo_ros_dynamixel/dynamixel_workbench_operators/launch/: hongdo_ros_joint_operator.launch
hongdo_ros_dynamixel/hongdo_ros_dynamixel/: CMakeLists.txt  package.xml
hongdo_ros_gazebo/: CMakeLists.txt  package.xml
hongdo_ros_gazebo/launch/: hongdo_ros_empty_world.launch  hongdo_ros_gazebo_rviz.launch
hongdo_ros_gazebo/sdf/: hongdo_ros.gazebo.xacro
hongdo_ros_gazebo/worlds/: erica.world
hongdo_ros_gazeboo/: CMakeLists.txt  package.xml
hongdo_ros_nodejs/: CMakeLists.txt  package.xml
hongdo_ros_obstacle/: CMakeLists.txt  package.xml
hongdo_ros_obstacle/include/hongdo_ros_obstacle/: stop_operator.h
hongdo_ros_obstacle/launch/: hongdo_ros_obstacle.launch
hongdo_ros_obstacle/src/: hongdo_ros_obstacle.cpp  hongdo_ros_stop.cpp  listener_test.py  obstacle.py
hongdo_ros_qrcode/: CMakeLists.txt  package.xml  setup.py
hongdo_ros_qrcode/nodes/: qrcode_generator.py
hongdo_ros_speak/: CMakeLists.txt  package.xml  setup.py
hongdo_ros_speak/nodes/: hongdo_ros_speak_client.node.py  hongdo_ros_speak_node.py
hongdo_ros_teleop/: CMakeLists.txt  package.xml  setup.py
hongdo_ros_teleop/launch/: hongdo_ros_teleop_key.launch
hongdo_ros_teleop/nodes/: hongdo_ros_teleop_key
hongdo_ros_tf2_broadcaster/: CMakeLists.txt  package.xml
hongdo_ros_tf2_broadcaster/src/: hongdo_ros_tf2_broadcaster.cpp
hongdo_ros_web/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  package.xml
hongdo_ros_web/launch/: hongdo_ros_web.launch
hongdo_ros_web/scripts/: QR_make.html  drawn.html  finish.html  game.html  game_intro.html  game_touch.html  index.html  intro.html  loading.html  nam.js  select_effect.html  select_pic.html  taking_pic.html  talker.js  test.html  upload.html
hongdo_ros_web/scripts/Lisense/: intro_LICENSE.txt
hongdo_ros_web/scripts/public/: QR_make.js  drawn.js  finish.js  game.js  game_intro.js  game_touch.js  index.js  intro.js  loading.js  select_effect.js  select_pic.js  taking_pic.js  upload.js
hongdo_ros_web/scripts/public/Lisense/: loading_license.txt
hongdo_ros_web/scripts/public/css/: QR_make_style.css  QR_make_style.css.map  drawn_style.css  drawn_style.css.map  finish_style.css  finish_style.css.map  game_intro_style.css  game_intro_style.css.map  game_style.css  game_style.css.map  game_touch_style.css  game_touch_style.css.map  index_style.css  index_style.css.map  intro_style.css  intro_style.css.map  loading_style.css  loading_style.css.map  select_effect_style.css  select_effect_style.css.map  select_pic_style.css  select_pic_style.css.map  taking_pic_style.css  taking_pic_style.css.map  upload_style.css  upload_style.css.map
hongdo_ros_web/scripts/public/hongdo_AI/cartoon_AI/: cartoon.py  face_detect.py
hongdo_ros_web/scripts/public/hongdo_AI/pencil_AI/: Resize.py  longAI.py  process_Orthogonal.py  process_order.py  process_random.py  startAI.sh
hongdo_ros_web/scripts/public/hongdo_AI/simple_AI/: =8.0.0  ArtLine_650.pkl  LICENSE  README.md  colab_requirements.txt  create_set_rule.sh  vision.py
hongdo_ros_web/scripts/public/scss/: QR_make_style.scss  _reset.scss  drawn_style.scss  finish_style.scss  game_intro_style.scss  game_style.scss  index_style.scss  intro_style.scss  loading_style.scss  select_effect_style.scss  select_pic_style.scss  taking_pic_style.scss  upload_style.scss
hongdo_ros_webconnect/: CMakeLists.txt  package.xml  setup.py
hongdo_ros_webconnect/launch/: hongdo_ros_capture.launch  hongdo_ros_qrmake.launch  hongdo_ros_speak.launch  hongdo_ros_webconnect.launch
hongdo_ros_webconnect/nodes/: Image_add.py  capture_service.py  capture_topic.py  hongdo_ros_webconnect_node.py  qrmake.py  speak_client.node.py  speak_node.py
hongdo_ros_webconnect/srv/: UrlTunnel.srv
