<?xml version="1.0"?>
<package format="2">
  <name>hongdo_ros</name>
  <version>0.0.0</version>
  <description>
    The hongdo robot meta package
  </description>
  <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hongdo_ros_bringup</exec_depend>
  <exec_depend>hongdo_ros_description</exec_depend>
  <exec_depend>hongdo_ros_gazebo</exec_depend>
  <exec_depend>hongdo_ros_navigation</exec_depend>
  <exec_depend>hongdo_ros_slam</exec_depend>
  <exec_depend>hongdo_ros_teleop</exec_depend>
  <exec_depend>hongdo_ros_obstacle</exec_depend>
  <!-- <exec_depend>hongdo_ros_marker_tracker</exec_depend> -->
  <!-- The export tag contains other, unspecified, tags -->
 <export><metapackage/></export>
</package>
