<?xml version="1.0"?>
<package format="2">
  <name>hongdo_ros_nodejs</name>
  <version>0.0.0</version>
  <description>The hongdo_ros_nodejs package</description>
  <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
