<?xml version="1.0"?>
<package format="2">
  <name>hongdo_ros_obstacle</name>
  <version>0.0.0</version>
  <description>hongdo_ros_obstacle package</description>
  <maintainer email="sharma.sanket272@todo.todo">sanketsharma</maintainer>
  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
