<?xml version="1.0"?>
<package format="2">
  <name>hongdo_ros_qrcode</name>
  <version>0.0.0</version>
  <description>The hongdo_ros_qrcode package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
