<?xml version="1.0"?>
<package format="2">
  <name>hongdo_ros_speak</name>
  <version>0.0.0</version>
  <description>The hongdo_ros_music package</description>
  <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
