<?xml version="1.0"?>
<package format="2">
  <name>hongdo_ros_teleop</name>
  <version>0.0.0</version>
  <description>The hongdo_ros_teleop package</description>
  <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
